Primer metodo de Articles funcional a priori